move style instructions to css files

--- a/templates/MusicAnalyzer/Index.html
+++ b/templates/MusicAnalyzer/Index.html
@@ -18,7 +18,7 @@
     <div class="uk-cover-container" uk-height-viewport>
         <img src={% static "images/cover.jpg" %} alt="cover_image" uk-cover>
         <div class="uk-child-width-1-1@s uk-child-width-1-1@m uk-position-top-center" uk-grid>
-                   <img class="uk-center" src={% static "images/font_white_big.png" %} alt="BeyondTheNotes" style="padding-top:15px;">
+                   <img class="uk-center" src={% static "images/font_white_big.png" %} alt="BeyondTheNotes" id="landingPageFont">
                </div>
         <div class="uk-position-cover uk-flex-middle uk-overlay uk-overlay-default">
 
