--- a/MusicAnalyzer/static/css/choice.css
+++ b/MusicAnalyzer/static/css/choice.css
@@ -30,7 +30,15 @@ h2 {
     border: 1px solid #1e87f0;
 }
 
+.submitButton {
+    margin: 2em;
+}
+
 
 h3 {
     font-size: 1.2em;
+}
+
+#fileupload {
+    display: none;
 }
