--- a/templates/MusicAnalyzer/UploadFile.html
+++ b/templates/MusicAnalyzer/UploadFile.html
@@ -1,10 +1,11 @@
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static "/css/uploadFile.css" %}"/>
 <div class="upload_files_box">
-            <h3>Drop Files Here to Upload</h3>
-        </div>
-        <button type="button" class="upload_files">
-           Upload files
-        </button>
-        <input id="fileupload" type="file" name="files" multiple
-           style="display: none;"
-           data-url="{% url 'MusicAnalyzer:choice' %}"
-           data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+    <h3>Drop Files Here to Upload</h3>
+</div>
+<button type="button" class="upload_files">
+    Upload files
+</button>
+<input id="fileupload" type="file" name="files" multiple
+       data-url="{% url 'MusicAnalyzer:choice' %}"
+       data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
