render ambitus information

--- a/templates/MusicAnalyzer/IndividualAnalysis.html
+++ b/templates/MusicAnalyzer/IndividualAnalysis.html
@@ -69,10 +69,7 @@
         </div>
     </div>
 
-    <div class="uk-padding" id="ambitusCanvas"></div>
-    <input type="hidden" id="ambitus" value="{{ ambitus_display }}">
-
     <div class="musicPiece">
-        {% include 'MusicAnalyzer/music_piece.html' %}
+        {% include 'MusicAnalyzer/results.html' %}
     </div>
 {% endblock %}
