only display „Choose the type of chord representation:“ when „chords“ is clicked

--- a/templates/MusicAnalyzer/IndividualAnalysis.html
+++ b/templates/MusicAnalyzer/IndividualAnalysis.html
@@ -47,7 +47,7 @@
                             {% endfor %}
                         </div>
                     </div>
-                    <div class="uk-margin">
+                    <div class="uk-margin" id="chordDependent">
                         <div class="question uk-text-center">
                             {% for field in chords_form.visible_fields %}
                                 {{ field.errors }}
