--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -45,7 +45,13 @@
 
         </div>
         <div class="uk-container">
-            <h3 class="uk-text-center">Search file from corpus</h3>
+            <h3 class="uk-text-center">Search file from corpus <a uk-tooltip="Click to explore contents of corpus"
+                                                                  target="_blank" rel="noopener noreferrer"
+                                                                  href="https://github.com/cuthbertLab/music21/tree/master/music21/corpus"
+                                                                  class="uk-icon-button" uk-icon="question"
+                                                                  id="linkToCorpus"
+            ></a></h3>
+
             {% if search_form %}
                 <form id="search_form" method="post"
                         {% if type == "distant" %}
