--- a/MusicAnalyzer/static/css/choice.css
+++ b/MusicAnalyzer/static/css/choice.css
@@ -16,9 +16,11 @@
 
 h2 {
     margin-top: 3em;
-    margin-bottom: 2.5em;
 }
 
+#explanation {
+    margin-bottom: 2.5em;
+}
 .uk-button-default {
     background-color: transparent;
     color: #333;
