--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -7,9 +7,12 @@
     <script src="{% static 'js/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
     <script src="{% static 'js/jquery-file-upload/jquery.fileupload.js' %}"></script>
     {# fontawesome for icons #}
+    <link rel="stylesheet" type="text/css" href="{% static "/css/distantAnalysis.css" %}"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    {# add static files here #}
+    <script src="{% static 'js/distant_analysis.js' %}"></script>
 {% endblock %}
 {% block right_nav_block %}
     <li><a href="#overview">Overview</a></li>
@@ -23,8 +26,12 @@
 {% block body_block %}
     <div id="overview">
         {% if  explanations %}
-            <h2>Overview</h2>
-            <div class=" uk-text-center" uk-grid>
+            <ul class="uk-breadcrumb">
+                <li><a href="{% url 'MusicAnalyzer:distant_choice' %}">Distant Hearing Choice</a></li>
+                <li><span>Distant Hearing Analysis</span></li>
+            </ul>
+            <h2 class="uk-text-center">Overview</h2>
+            <div class="uk-text-center" uk-grid>
                 <div class="uk-width-1-3">
                     <div class="uk-card uk-card-default uk-card-body">
                         <h2 class="uk-card-title">Chords</h2>
@@ -61,6 +68,7 @@
 
     <div id="chords">
         <h2>Chords</h2>
+    <div class="ct-chart ct-perfect-fourth"></div>
 
     </div>
     <div id="pitches">
