--- a/templates/MusicAnalyzer/results.html
+++ b/templates/MusicAnalyzer/results.html
@@ -3,9 +3,12 @@
 <script src="{% static 'js/opensheetmusicdisplay.min.js' %}"></script>
 
 {% if ambitus_display %}
-<div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m"
-         style="background: #f2f7fc; border: 1px solid #ddd; margin-top: 6em;">
-        <div class="uk-padding" id="ambitusCanvas"></div>
+    <h3 class="uk-text-center">Ambitus</h3>
+    <p class="uk-text-center">{{ ambitus_interval }} <br/>
+        {{ semitones }}</p>
+<div class=" uk-align-center uk-width-1-1 uk-width-1-4@m"
+         style="background: #f2f7fc; border: 1px solid #ddd;">
+        <div class="uk-padding-small" id="ambitusCanvas" style="padding-top:0;"></div>
     </div>
     <input type="hidden" id="ambitus" value="{{ ambitus_display }}">
 {% endif %}
