--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -65,10 +65,30 @@
             </div>
         {% endif %}
     </div>
+    <h3>The following music pieces were analysed</h3>
+    <table class="uk-table uk-table-middle uk-table-divider">
+        <thead>
+        <tr>
+            <th>composer</th>
+            <th>title</th>
+            <th>year</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for music_piece in music_pieces_info %}
+            <tr>
+                <td>{{ music_piece.metadata.composer }}</td>
+                <td>{{ music_piece.metadata.title }}</td>
+                <td>{{ music_piece.metadata.year }}</td>
+            </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
 
     <div id="chords">
         <h2>Chords</h2>
-    <div class="ct-chart ct-perfect-fourth"></div>
+        <div class="ct-chart ct-perfect-fourth"></div>
 
     </div>
     <div id="pitches">
