"use" chord summary stats in template

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -83,6 +83,7 @@
             </tr>
         {% endfor %}
 
+<input type="hidden" id="chord_summary_stats" value="{{ chord_summary_stats }}">
         </tbody>
     </table>
 
