--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -80,6 +80,24 @@
             {% endif %}
         </div>
     </div>
+
+    {% if type == "distant" %}
+
+        <h3>Define groups</h3>
+        <form id="add_group_form" method="post"
+              action="{% url 'MusicAnalyzer:distant_choice' %}"
+              data-add-group-url="{% url 'MusicAnalyzer:distant_choice' %}"
+        >
+            {% csrf_token %}
+            <input type="hidden" name="state" value="new_group"/>
+            {{ add_group_form.as_p }}
+        </form>
+        <div class="uk-flex uk-flex-center">
+            <button id="add_group_button" class="uk-button uk-button-default"
+                    onclick="add_group(event)"><i class="fas fa-plus-circle"></i>&nbsp;Add
+            </button>
+        </div>
+    {% endif %}
     <div id="searchResults" class="invisible uk-grid uk-child-width-1-1">
         <hr class="uk-divider-icon">
         <div class="uk-container uk-align-center">
@@ -94,8 +112,10 @@
                     {% endif %}>
                 {% csrf_token %}
                 <input type="hidden" name="state" value="select_for_analysis"/>
+
                 <div class="uk-flex uk-flex-center">
-                    <button class="uk-button uk-button-default uk-align-center submitButton" type="submit" disabled id="analyzeButton1"><i
+                    <button class="uk-button uk-button-default uk-align-center submitButton" type="submit" disabled
+                            id="analyzeButton1"><i
                             class="fas fa-chart-line"></i>&nbsp;&nbsp;Analyze
 
                     </button>
@@ -119,11 +139,12 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {{data|json_script:"already_uploaded" }}
+                    {{ data|json_script:"already_uploaded" }}
                     </tbody>
                 </table>
                 <div class="uk-flex uk-flex-center">
-                    <button class="uk-button uk-button-default analyzeButton" type="submit" disabled id ="analyzeButton2"><i
+                    <button class="uk-button uk-button-default analyzeButton" type="submit" disabled
+                            id="analyzeButton2"><i
                             class="fas fa-chart-line"></i>&nbsp;&nbsp;Analyze
 
                     </button>
