add new groups to group choice form dynamically

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -97,6 +97,11 @@
                     onclick="add_group(event)"><i class="fas fa-plus-circle"></i>&nbsp;Add
             </button>
         </div>
+
+        <div id="group_choice_model_form_to_copy_from" class="invisible">
+        {{ group_choice_form.as_p }}
+        </div>
+
     {% endif %}
     <div id="searchResults" class="invisible uk-grid uk-child-width-1-1">
         <hr class="uk-divider-icon">
