start making adding of group choice form to table possible

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -139,6 +139,7 @@
                                 </a>
                             {% endif %}
                         </th>
+                        {% if type == "distant" %}<th>group</th>{% endif %}
                         <th>composer</th>
                         <th>title</th>
                     </tr>
