--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -97,11 +97,6 @@
                     onclick="add_group(event)"><i class="fas fa-plus-circle"></i>&nbsp;Add
             </button>
         </div>
-
-        <div id="group_choice_model_form_to_copy_from" class="invisible">
-        {{ group_choice_form.as_p }}
-        </div>
-
     {% endif %}
     <div id="searchResults" class="invisible uk-grid uk-child-width-1-1">
         <hr class="uk-divider-icon">
@@ -117,9 +112,12 @@
                     {% endif %}>
                 {% csrf_token %}
                 <input type="hidden" name="state" value="select_for_analysis"/>
+                {% if type == "distant" %}
+                    {{ music_choice_form.management_form }}
+                {% endif %}
 
                 <div class="uk-flex uk-flex-center">
-                    <button class="uk-button uk-button-default uk-align-center submitButton" type="submit" disabled
+                    <button class="uk-button uk-button-default uk-align-center submitButton" onclick="addSelected()" disabled
                             id="analyzeButton1"><i
                             class="fas fa-chart-line"></i>&nbsp;&nbsp;Analyze
 
@@ -149,7 +147,7 @@
                     </tbody>
                 </table>
                 <div class="uk-flex uk-flex-center">
-                    <button class="uk-button uk-button-default analyzeButton" type="submit" disabled
+                    <button class="uk-button uk-button-default analyzeButton" onclick="addSelected()" disabled
                             id="analyzeButton2"><i
                             class="fas fa-chart-line"></i>&nbsp;&nbsp;Analyze
 
