bugfix: root sum stats count correctly now

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -66,7 +66,7 @@
             </div>
         {% endif %}
     </div>
-    <h3>The following music pieces were analysed</h3>
+    <h3>The following music pieces were analyzed</h3>
     <table class="uk-table uk-table-middle uk-table-divider">
         <thead>
         <tr>
